# ChangeLog for dev-python/eventlet
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Jun 2010; Markus Ullmann <jokey@gentoo.org> eventlet-0.9.9.ebuild:
  Fix up depspec

  07 Jun 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.9.7.ebuild, +eventlet-0.9.9.ebuild:
  Version bump

  03 Apr 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  eventlet-0.9.7.ebuild:
  Reintroduce PYTHON_DEPEND

  02 Apr 2010; Justin Lecher <jlec@gentoo.org> eventlet-0.9.7.ebuild:
  Either use SUPPORT_PYTHON_ABIS/RESTRICT_PYTHON_ABIS or PYTHON_DEPEND

  31 Mar 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  eventlet-0.9.7.ebuild:
  Add PYTHON_DEPEND

  10 Mar 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.9.6.ebuild, +eventlet-0.9.7.ebuild:
  Version bump

  27 Feb 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.9.5.ebuild, +eventlet-0.9.6.ebuild:
  Version bump

  22 Feb 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.9.4.ebuild, +eventlet-0.9.5.ebuild:
  Version bump, add sphinx docs generation and minor tweak to testing

  31 Jan 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.9.3.ebuild, +eventlet-0.9.4.ebuild:
  Version bump

  19 Jan 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.9.2.ebuild, +eventlet-0.9.3.ebuild:
  Version bump. Add support for ABI

  16 Dec 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.9.0.ebuild, +eventlet-0.9.2.ebuild:
  Version bump. Tests still fail without twisted, upstream notified

  13 Oct 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.8.16.ebuild, +eventlet-0.9.0.ebuild:
  Version bump, fix deps and use nose for testing. Note: Tests fail because of
  upstream decisions

  05 Sep 2009; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
  -eventlet-0.8.15.ebuild, +eventlet-0.8.16.ebuild,