@@ -1,4 +1,4 @@
-DIST eventlet-0.9.9.tar.gz 233549 RMD160 ef03668dc1e713437d55ee4021cb6f80327fa612 SHA1 f0c86fc20d27e5c0aee1d91d55fbb50042ac23ee SHA256 0fa685b4a0ea4e90c99b04452096441b44bc176fd4fd48e2f659fa49ebd9899f
-EBUILD eventlet-0.9.9.ebuild 1208 RMD160 40adc52bccb64d3f6dc8fbaa633f727be1948bd9 SHA1 26ccc90e1b3ce00abd66567a96db3c28ff977202 SHA256 084ab26168927fc1ae5447aaf8a241305246cf37c57cb32f9af61910c4f82a28
-MISC ChangeLog 3071 RMD160 0a37ec806817184cf63c2f9330b445e2e734327f SHA1 3dbc5cdba0848e150dcd4e5d831916988e3d3d31 SHA256 cd4fc80da1078dd6c3bebb8495a6da890cda1886b2a73421efef9259a6a650ea
+DIST eventlet-0.9.10.tar.gz 245482 RMD160 43727a07c10f60833ae1e9a4cc832f83030efb34 SHA1 a284b93dbf90186ff93a69c631b689625c0f703e SHA256 14ca2ccd9edce7ee1cf81856b2a8aa97dd8018a4d340791ed9fe857f02b227f7
+EBUILD eventlet-0.9.10.ebuild 1210 RMD160 2e70a7a5c843293f0dd6a14633f530e58f70696f SHA1 1202687d3a8170a881ca4669a7a718000ff5f40b SHA256 7d0dd411f9e05ca1fdcc9cf6d4871583397912796bebce5d4da238f0f1ca67d3
+MISC ChangeLog 3215 RMD160 17bfc82754419a4c8b9eacc4682e36f029c5ecdc SHA1 c6af9f3c2dea0fdc3d940734e95ee85ce85b2214 SHA256 5552b9f792d1117b963a1100781bd1435456a8ab7fceb04c998fef18e86bc47b
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
