@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Aug 2010; Johan Bergström (jbergstroem) <bugs@bergstroem.nu>
+  -eventlet-0.9.9.ebuild, +eventlet-0.9.10.ebuild:
+  Version bump, fix deps
+
   13 Jun 2010; Markus Ullmann <jokey@gentoo.org> eventlet-0.9.9.ebuild:
   Fix up depspec
 
